Refactor writing of output files